# go/model_tracert_parameters.go
@@ -1,0 +1,14 @@
+/*
+ * ptruora
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 1.0.0a0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type TracertParameters struct {
+	Items []string `json:"items,omitempty"`
+}
